tests/ui/parallel-rustc/unexpected-type-issue-120601.stderr
error[E0670]: `async fn` is not permitted in Rust 2015
   |
LL | async fn foo() -> Result<(), ()> {
   | ^^^^^ to use `async fn`, switch to Rust 2018 or later
   |
   = help: pass `--edition 2021` to `rustc`
   = note: for more on editions, read https://doc.rust-lang.org/edition-guide

error[E0670]: `async fn` is not permitted in Rust 2015
   |
LL | async fn tuple() -> Tuple {
   | ^^^^^ to use `async fn`, switch to Rust 2018 or later
   |
   = help: pass `--edition 2021` to `rustc`
   = note: for more on editions, read https://doc.rust-lang.org/edition-guide

error[E0670]: `async fn` is not permitted in Rust 2015
   |
LL | async fn match_() {
   | ^^^^^ to use `async fn`, switch to Rust 2018 or later
   |
   = help: pass `--edition 2021` to `rustc`
   = note: for more on editions, read https://doc.rust-lang.org/edition-guide

   |

error[E0308]: mismatched types
   |
LL |     match tuple() {
   |           ------- this expression has type `impl Future<Output = Tuple>`
LL |         Tuple(_) => {}
   |         ^^^^^^^^ expected future, found `Tuple`
   |
   = note: expected opaque type `impl Future<Output = Tuple>`
                   found struct `Tuple`
help: consider `await`ing on the `Future`
   |
LL |     match tuple().await {
   |                  ++++++

error[E0425]: cannot find function, tuple struct or tuple variant `Unstable2` in this scope
   |
LL |     Unstable2(())
   |     ^^^^^^^^^ not found in this scope


For more information about an error, try `rustc --explain E0308`.